Fix crash while playing against CPU

Crash was caused by dereference of invalidates QList iterator. Fixed by
using removeIf instead of remove values in iterator based
loop.

BUG: 449639

Closes #449639

(cherry picked from commit 3572b3f4e79b57b5a56248100cc8652c219bac06)